--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "messenger-server",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "start": "nodemon ./src/index.ts",
