--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon ./src/index.ts",
-    "build": "webpack --config webpack.config.js",
+    "start": "cross-env NODE_ENV=development nodemon ./src/index.ts",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -18,6 +19,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
