--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
     "ts-loader": "^9.5.1",
