--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
