Add database connection

--- a/config.json
+++ b/config.json
@@ -1,5 +1,12 @@
 {
   "server": {
     "port": 4000
+  },
+  "database": {
+    "user": "messenger",
+    "password": "password",
+    "host": "localhost",
+    "port": 5432,
+    "database": "messenger"
   }
 }
