--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.6",
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.0",
@@ -23,6 +24,7 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "logger": "github:zsrg/logger#v0.1.0"
+    "logger": "github:zsrg/logger#v0.1.0",
+    "pg": "^8.11.5"
   }
 }
